Fix subtitle overflow on mobile

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -6,7 +6,7 @@ $primary-color: #f9f8f4;
 $secondary-color: #333331;
 $light-color: white;
 
-$xxs-font-size: 0.625rem;
+$xxs-font-size: 0.6875rem;
 $xs-font-size: 0.9375rem;
 $s-font-size: 1rem;
 $font-size: 1.125rem;
